--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h2>Example:3</h2>
     <p style="color:red">TEST TOOL Source version control</p>
     <button>Book Now</button>
+    <button>Apply Now</button>
 
 </body>
 
