--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <p style="color:red">TEST TOOL Source version control</p>
     <button>Book Now</button>
     <button>Apply Now</button>
+    <button>Pay Now</button>
 
 
 </body>
