--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <h1>Understanding Git</h1>
     <h2>Example:3</h2>
     <p style="color:red">TEST TOOL Source version control</p>
+    <p style="color:red">Git Tools</p>
     <button>Book Now</button>
     <button>Apply Now</button>
 
